[package]
name = "knetd"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1+"

[[bin]]
name = "knetd"
path = "src/main.rs"

[dependencies]
knetd-common = { path = "../knetd-common" }
knet-bindings = { workspace = true }
nozzle-bindings = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonrpc-core = "18.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3.0"
